--- a/bike-stats.ipynb
+++ b/bike-stats.ipynb
@@ -197,22 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "624.842"
+       "1178.2956753399776"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 21
     }
    ],
    "source": [
-    "df2['tripduration'].median()"
+    "df2['tripduration'].mean()"
    ]
   },
   {
@@ -224,23 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0    1987.0\n",
+       "0    33.0\n",
        "dtype: float64"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 22
     }
    ],
    "source": [
-    "df2['birthyear'].mode()"
+    "2020 - df2['birthyear'].mode()"
    ]
   },
   {
@@ -259,22 +259,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "16.517241379310345"
+       "17.586206896551722"
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 20
     }
    ],
    "source": [
-    "df1['current_dockcount'].mean()"
+    "df1['install_dockcount'].mean()"
    ]
   },
   {
